--- a/app/templates/niche/index.html
+++ b/app/templates/niche/index.html
@@ -17,8 +17,8 @@
         <!-- Header -->
         <div class="niche-radar-header">
             <h1 class="niche-radar-title">
-                <i class="ph ph-radar"></i>
-                Niche Radar
+                <i class="ph-bold ph-crosshair"></i>
+                <span>Niche Radar</span>
             </h1>
         </div>
 
