--- a/app/templates/thumbnail/index.html
+++ b/app/templates/thumbnail/index.html
@@ -29,7 +29,10 @@
             <div class="input-section">
                 <!-- Upload Images -->
                 <div class="form-group">
-                    <label class="form-label">Upload Image(s)</label>
+                    <label class="form-label">
+                        <i class="ph ph-image"></i>
+                        Upload Image(s)
+                    </label>
                     <div class="upload-grid">
                         <div class="upload-slot" onclick="triggerUpload(0)">
                             <span class="upload-number">1</span>
@@ -70,7 +73,10 @@
                 <div class="form-group">
                     <div class="generation-options">
                         <div class="model-selection-wrapper">
-                            <label class="form-label">Select Model</label>
+                            <label class="form-label">
+                                <i class="ph ph-cpu"></i>
+                                Select Model
+                            </label>
                             <div class="model-cards">
                                 <div class="model-card selected" data-model="nano-banana" onclick="selectModel('nano-banana')">
                                     <div class="model-name">Canvas Editor</div>
@@ -89,7 +95,10 @@
                             </div>
                         </div>
                         <div class="num-images-wrapper">
-                            <label class="form-label">Generations</label>
+                            <label class="form-label">
+                                <i class="ph ph-stack"></i>
+                                Generations
+                            </label>
                             <div class="num-selector">
                                 <button class="num-btn" onclick="decreaseNumImages()" id="decreaseBtn">
                                     <i class="ph ph-minus"></i>
