--- a/app/templates/video_script/index.html
+++ b/app/templates/video_script/index.html
@@ -32,7 +32,10 @@
                         <div class="options-grid">
                             <!-- Video Length -->
                             <div class="form-group">
-                                <label class="form-label">Video Length</label>
+                                <label class="form-label">
+                                    <i class="ph ph-video"></i>
+                                    Video Length
+                                </label>
                                 <div class="toggle-group">
                                     <button class="toggle-btn active" onclick="setVideoType('long')" id="longVideoBtn">
                                         <i class="ph ph-film-script"></i>
@@ -73,7 +76,10 @@
 
                             <!-- Script Format -->
                             <div class="form-group">
-                                <label class="form-label">Script Format</label>
+                                <label class="form-label">
+                                    <i class="ph ph-file-text"></i>
+                                    Script Format
+                                </label>
                                 <div class="toggle-group">
                                     <button class="toggle-btn active" onclick="setScriptFormat('full')" id="fullScriptBtn">
                                         <i class="ph ph-align-left"></i>
@@ -89,7 +95,10 @@
 
                         <!-- Video Concept Input -->
                         <div class="form-group">
-                            <label class="form-label">Video Concept</label>
+                            <label class="form-label">
+                                <i class="ph ph-article"></i>
+                                Video Concept
+                            </label>
                             <textarea class="input-textarea"
                                       id="conceptInput"
                                       placeholder="Describe your video idea, main topic, key points you want to cover, target audience, and any specific style or tone you prefer..."
