--- a/app/templates/video_tags/index.html
+++ b/app/templates/video_tags/index.html
@@ -30,7 +30,10 @@
                     <div class="input-panel">
                         <!-- Video Topic Input -->
                         <div class="form-group">
-                            <label class="form-label">Video Topic or Description</label>
+                            <label class="form-label">
+                                <i class="ph ph-article"></i>
+                                Video Topic or Description
+                            </label>
                             <div class="input-helper">
                                 <i class="ph ph-info"></i>
                                 YouTube allows 400-500 characters total for tags. We'll optimize for maximum reach and discoverability.
