--- a/app/templates/video_title/index.html
+++ b/app/templates/video_title/index.html
@@ -30,7 +30,10 @@
                     <div class="input-panel">
                         <!-- Video Type Selection -->
                         <div class="form-group">
-                            <label class="form-label">Video Type</label>
+                            <label class="form-label">
+                                <i class="ph ph-video"></i>
+                                Video Type
+                            </label>
                             <div class="video-type-toggle">
                                 <button class="type-btn active" onclick="setVideoType('long')" id="longFormBtn">
                                     <i class="ph ph-film-script"></i>
@@ -45,7 +48,10 @@
 
                         <!-- Video Description Input -->
                         <div class="form-group">
-                            <label class="form-label">Video Description or Script</label>
+                            <label class="form-label">
+                                <i class="ph ph-article"></i>
+                                Video Description or Script
+                            </label>
                             <textarea class="input-textarea"
                                       id="videoInput"
                                       placeholder="Describe your video content, paste your script, or outline your main points. The more detail you provide, the better titles we can generate..."
