--- a/app/static/css/thumbnail.css
+++ b/app/static/css/thumbnail.css
@@ -89,7 +89,9 @@ html.dark .thumbnail-content {
 }
 
 .form-label {
-    display: block;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     color: var(--text-secondary);
     font-size: 0.875rem;
     font-weight: 600;
@@ -100,6 +102,14 @@ html.dark .thumbnail-content {
 
 html.dark .form-label {
     color: #d4d4d8;
+}
+
+.form-label i {
+    color: #3B82F6;
+}
+
+html.dark .form-label i {
+    color: #60A5FA;
 }
 
 /* Upload Grid */
