--- a/app/templates/competitors/index.html
+++ b/app/templates/competitors/index.html
@@ -14,7 +14,7 @@
 {% block content %}
 <div class="content-panel">
     <div class="competitors-wrapper">
-        <!-- Header -->
+        <!-- Header - Matching other pages style -->
         <div class="competitors-header">
             <div class="header-content">
                 <h1 class="page-title">
@@ -53,7 +53,7 @@
 
                         <!-- Competitors List -->
                         <div class="competitors-list" id="competitorsList">
-                            <!-- Competitors will be added here -->
+                            <!-- Competitors will be added here dynamically -->
                         </div>
 
                         <!-- Analysis Options -->
@@ -90,7 +90,7 @@
 
             <!-- Results Section -->
             <div class="results-section" id="resultsSection" style="display: none;">
-                <!-- Results will be displayed here -->
+                <!-- Results will be displayed here dynamically -->
             </div>
         </div>
     </div>
